--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
       gtag('config', 'G-TZ54CK4RYX');
     </script>
     <title>Reddit</title>
+    <!-- Google Identity Services -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
